# userauth

./: .gitignore  Cargo.toml  Makefile  README.md  Readme.md
.github/workflows/: cargo-test.yml  check-ooniauth-py-version-bump.yml  rust-tests.yml  test-ooniauth-core.yml  wheels-release.yml
ios/: README.md  build-ffi.sh
ios/OoniAuthApp/: ContentView.swift  OoniAuthAppApp.swift
ios/OoniAuthApp.xcodeproj/: project.pbxproj
ios/OoniAuthAppTests/: OoniAuthAppTests.swift
ios/OoniAuthAppUITests/: OoniAuthAppUITests.swift  OoniAuthAppUITestsLaunchTests.swift
ios/OoniAuthBindings/: .gitignore  OoniAuthFFI.swift  README.md
ooniauth-core/: Cargo.toml
ooniauth-core/benches/: basic_usage.rs  bench_basic_usage.rs  bench_client.rs  bench_server.rs
ooniauth-core/examples/: basic_usage.rs  benchmark_table.rs
ooniauth-core/src/: benchmark.rs  errors.rs  lib.rs  registration.rs  submit.rs  update.rs  user_registration.rs  user_submit.rs
ooniauth-ffi/: Cargo.toml
ooniauth-ffi/include/: ooniauth_ffi.h
ooniauth-ffi/src/: lib.rs
ooniauth-py/: Cargo.toml  Makefile  README.md  Readme.md  build.rs  ooniauth_py.pyi  pyproject.toml  wheels
ooniauth-py/benches/: bench_server.rs
ooniauth-py/src/: exceptions.rs  lib.rs  protocol.rs  utils.rs
ooniauth-py/wheels/: ooniauth_py-0.1.0-cp310-abi3-manylinux_2_34_x86_64.whl
scripts/: create-release-tag.py  create-release-tag.sh  criterion_extract.py
src/: lib.rs  registration.rs  submit.rs
