[workspace]
members = ["ooniauth-core", "ooniauth-py"]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
bincode = "1"
cmz = {  version = "0.1.0-rc1" }
serde = "1.0.219"
thiserror = "2.0.12"

[patch.crates-io]
cmz = { path = "include/cmz" }
sigma-compiler-core = { path = "include/sigma-compiler/sigma-compiler-core" }
