[workspace]
members = [
    "ooniauth-core",
    "ooniauth-py",
    "ooniauth-ffi"
]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
bincode = "1"
# The sigma-rs stack is sourced from GitHub main. To refresh the pinned
# commits in Cargo.lock, run `cargo update -p cmz -p sigma-compiler -p sigma-proofs`.
cmz = { git = "https://github.com/sigma-rs/cmz", branch = "main" }
serde = "1.0.219"
thiserror = "2.0.12"

[patch.crates-io]
# Force all transitive crates.io references in the sigma-rs stack onto GitHub main.
cmz = { git = "https://github.com/sigma-rs/cmz", branch = "main" }
cmz-core = { git = "https://github.com/sigma-rs/cmz", branch = "main" }
cmz-derive = { git = "https://github.com/sigma-rs/cmz", branch = "main" }
sigma-compiler = { git = "https://github.com/sigma-rs/sigma-compiler", branch = "mu/fix-determinism" }
sigma-compiler-core = { git = "https://github.com/sigma-rs/sigma-compiler", branch = "mu/fix-determinism" }
sigma-compiler-derive = { git = "https://github.com/sigma-rs/sigma-compiler", branch = "mu/fix-determinism" }
sigma-proofs = { git = "https://github.com/sigma-rs/sigma-proofs", branch = "main" }
