[package]
name = "ooniauth-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
hex = "0.4"
ooniauth-core = { path = "../ooniauth-core" }
rand = "0.8.5"
tracing-forest = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
