[package]
name = "ooniauth_py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ooniauth_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
cmz = { workspace = true }
ooniauth-core = {path = "../ooniauth-core"}
pyo3 = {version = "0.26.0", features = ["extension-module", "abi3-py310"]}
pyo3-stub-gen = "0.14.1"
rand = {workspace = true}
bincode = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
base64 = "0.22.1"

[build-dependencies]
pyo3-build-config = "0.28.3"
