[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ooniauth-py"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
description = "Python bindings for the userauth library: the anonymous credentials implementation used in OONI"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ooni/userauth"
Issues = "https://github.com/ooni/userauth/pulls"

[tool.maturin]
features = ["pyo3/extension-module"]
